update version and root css

--- a/public/intranets-design-system/docs/components/detail/texts--desktop.html
+++ b/public/intranets-design-system/docs/components/detail/texts--desktop.html
@@ -415,7 +415,7 @@
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="./grid.html"
+                href="./grid--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -449,7 +449,7 @@
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="./palette.html"
+                href="./palette--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -633,8 +633,8 @@
                     <dt class="Tree-asideTerm">Built on:</dt>
                     <dd class="Tree-asideDescription">
                         
-                            <time datetime="2025-04-30T13:02:45.359Z">
-                                30/04/2025
+                            <time datetime="2025-10-01T05:19:15.761Z">
+                                01/10/2025
                             </time>
                         
                     </dd>
@@ -663,7 +663,219 @@
         
     
         
+            
+            <div class="Navigation-group" data-role="variant-group" data-component="grid">
+                
+<div class="Tree" data-behaviour="tree" id="tree-grid-variants">
+    <div class="Tree-header">
+        <h3 class="Tree-title">Grid Variants</h3>
+
+        <button type="button" data-behaviour="collapse-tree" class="Tree-collapse" title="Collapse tree" aria-label="Collapse tree" hidden>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m9 11c-.6 0-1 .4-1 1s.4 1 1 1h6c.6 0 1-.4 1-1s-.4-1-1-1z"/><path d="m19 21h-14c-1.1 0-2-.9-2-2v-14c0-1.1.9-2 2-2h14c1.1 0 2 .9 2 2v14c0 1.1-.9 2-2 2zm-14-16v14h14v-14z"/></svg>
+
+        </button>
+    </div>
+    <ul class="Tree-items Tree-depth-1">
+        
     
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./grid--default.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="grid--default"
+                data-handle="grid"
+            >
+                <span>Default</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./grid--desktop.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="grid--desktop"
+                data-handle="grid"
+            >
+                <span>Desktop</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./grid--offset.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="grid--offset"
+                data-handle="grid"
+            >
+                <span>Offset</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+
+    </ul>
+</div>
+
+            </div>
+        
+    
+        
+            
+            <div class="Navigation-group" data-role="variant-group" data-component="palette">
+                
+<div class="Tree" data-behaviour="tree" id="tree-palette-variants">
+    <div class="Tree-header">
+        <h3 class="Tree-title">Palette Variants</h3>
+
+        <button type="button" data-behaviour="collapse-tree" class="Tree-collapse" title="Collapse tree" aria-label="Collapse tree" hidden>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m9 11c-.6 0-1 .4-1 1s.4 1 1 1h6c.6 0 1-.4 1-1s-.4-1-1-1z"/><path d="m19 21h-14c-1.1 0-2-.9-2-2v-14c0-1.1.9-2 2-2h14c1.1 0 2 .9 2 2v14c0 1.1-.9 2-2 2zm-14-16v14h14v-14z"/></svg>
+
+        </button>
+    </div>
+    <ul class="Tree-items Tree-depth-1">
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./palette--default.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="palette--default"
+                data-handle="palette"
+            >
+                <span>Default</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./palette--definition-root.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="palette--definition-root"
+                data-handle="palette"
+            >
+                <span>Definition Root</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+
+    </ul>
+</div>
+
+            </div>
         
     
         
@@ -699,6 +911,108 @@
                 data-handle="space"
             >
                 <span>Default</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./space--direction.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="space--direction"
+                data-handle="space"
+            >
+                <span>Direction</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./space--direction-phone.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="space--direction-phone"
+                data-handle="space"
+            >
+                <span>Direction Phone</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a
+                class="Tree-entityLink"
+                href="./space--direction-tablet.html"
+                data-role="tree-link"
+                
+                data-pjax
+                data-test="space--direction-tablet"
+                data-handle="space"
+            >
+                <span>Direction Tablet</span>
                 
 
 <div class="Status Status--unlabelled">
