--- a/public/intranets-design-system/docs/components/detail/grid--offset.html
+++ b/public/intranets-design-system/docs/components/detail/grid--offset.html
@@ -9,7 +9,7 @@
     };
     </script>
     <script>var cl = document.querySelector('html').classList; cl.remove('no-js'); cl.add('has-js');</script>
-    <link rel="shortcut icon" href="../themes/mandelbrot/favicon.ico" type="image/ico">
+    <link rel="shortcut icon" href="../../themes/mandelbrot/favicon.ico" type="image/ico">
 <style>
     :root {
         
@@ -18,12 +18,12 @@
     }
 </style>
 
-<link rel="stylesheet" href="../themes/mandelbrot/css/aqua.css?cachebust=1.10.3" type="text/css">
+<link rel="stylesheet" href="../../themes/mandelbrot/css/aqua.css?cachebust=1.10.3" type="text/css">
 
-<link rel="stylesheet" href="../themes/mandelbrot/css/highlight.css?cachebust=1.10.3" type="text/css">
+<link rel="stylesheet" href="../../themes/mandelbrot/css/highlight.css?cachebust=1.10.3" type="text/css">
 
 
-<title>Intranets Design System | Intranets Design System</title>
+<title>Example component: Offset | Intranets Design System</title>
 
 </head>
 <body>
@@ -50,7 +50,7 @@
 
         </div>
     </button>
-    <a href="../index.html" class="Header-title" data-pjax>Intranets Design System</a>
+    <a href="../../index.html" class="Header-title" data-pjax>Intranets Design System</a>
 </div>
 
     </div>
@@ -61,38 +61,179 @@
             <div class="Frame-inner" id="pjax-container">
             
 
-<div class="Document">
-
-    <div class="Document-header">
-        
-        <h1 class="Document-title">Intranets Design System</h1>
-        
-
-
-        
-    </div>
-
-    <div class="Document-content">
+<div class="Pen" data-behaviour="pen" id="pen-58eac01c122b8146c9308b21d6f876fc">
 
     
 
-<div class="Prose">
+    <div class="Pen-panel Pen-header">
+    <h1 class="Pen-title">
+        <a class="Pen-previewLink" href="../preview/grid--offset.html" title="Preview">
+            Example component: Offset
+            <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0h24v24H0z" fill="none"/>
+    <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
+</svg>
 
+        </a>
+    </h1>
 
+    <span class="Pen-preview-size" data-role="preview-size"></span>
 
     
-    
-    <p>This is your index page. You can edit its contents at <code>docs/01-index.md</code>
-dezdze</p>
 
-    
+<div class="Status Status--tag">
+
+<label class="Status-label" style="background-color: #29CC29; border-color: #29CC29;">Ready</label>
+
+</div>
 
 
 </div>
 
 
-
+    <div class="Pen-panel Pen-preview Preview" data-behaviour="preview" id="preview-58eac01c122b8146c9308b21d6f876fc">
+    <div class="Preview-wrapper" data-role="resizer">
+        <div class="Preview-resizer">
+             <iframe
+                class="Preview-iframe"
+                data-role="window"
+                src="../preview/grid--offset.html"
+                 style=""
+                marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" scrolling="yes">
+            </iframe>
+        </div>
+        <div class="Preview-handle" data-role="resize-handle"></div>
+        <div class="Preview-overlay"></div>
     </div>
+</div>
+
+
+    <div class="Pen-handle Pen-handle--browser" data-role="resize-handle"></div>
+
+    <div class="Pen-panel Pen-info" data-role="info">
+    <div class="Browser" data-behaviour="browser" id="browser-58eac01c122b8146c9308b21d6f876fc">
+
+    
+
+<div class="Browser-controls">
+    <ul class="Browser-tabs">
+        
+        
+        <li class="Browser-tab Browser-tab--notes is-active " data-role="tab">
+            <a href="#browser-58eac01c122b8146c9308b21d6f876fc-panel-notes">
+                Notes
+            </a>
+        </li>
+        
+        
+        
+        <li class="Browser-tab Browser-tab--info" data-role="tab">
+            <a href="#browser-58eac01c122b8146c9308b21d6f876fc-panel-info">
+                Info
+            </a>
+        </li>
+        
+        
+        
+        <li class="Browser-tab Browser-tab--html" data-role="tab">
+            <a href="#browser-58eac01c122b8146c9308b21d6f876fc-panel-html">
+                HTML
+            </a>
+        </li>
+        
+        
+    </ul>
+</div>
+
+
+    
+    <div class="Browser-panel Browser-notes" data-role="tab-panel" id="browser-58eac01c122b8146c9308b21d6f876fc-panel-notes">
+    <div class="Prose Prose--condensed">
+        
+        <p class="Browser-isEmptyNote">No notes defined.</p>
+        
+    </div>
+</div>
+
+    
+    <div class="Browser-panel" data-role="tab-panel" id="browser-58eac01c122b8146c9308b21d6f876fc-panel-info">
+    <ul class="Meta">
+        <li class="Meta-item">
+            <strong class="Meta-key">Handle:</strong>
+            <span class="Meta-value">@grid--offset</span>
+        </li>
+        
+        
+        <li class="Meta-item">
+            <strong class="Meta-key">Preview:</strong>
+            <span class="Meta-value">
+                <ul>
+                    <li><a data-no-pjax href="../preview/grid--offset.html"><span>With layout</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0h24v24H0z" fill="none"/>
+    <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
+</svg>
+</a></li>
+                    <li><a data-no-pjax href="../render/grid--offset.html"><span>Component only</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0h24v24H0z" fill="none"/>
+    <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
+</svg>
+</a></li>
+                </ul>
+            </span>
+        </li>
+        <li class="Meta-item">
+            <strong class="Meta-key">Filesystem Path:</strong>
+            <span class="Meta-value">components\grid\grid--offset.twig</span>
+        </li>
+        
+        
+    </ul>
+</div>
+
+    
+    
+<div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-58eac01c122b8146c9308b21d6f876fc-panel-html">
+    <code class="Code Code--lang-html hljs">
+        
+        <pre><span class="hljs-tag">&lt;<span class="hljs-name">style</span>&gt;</span><span class="css">
+    <span class="hljs-selector-class">.ids-cell</span> {
+        <span class="hljs-attribute">box-sizing</span>: border-box;
+        <span class="hljs-attribute">background-color</span>: <span class="hljs-number">#BDBDBD</span>;
+        <span class="hljs-attribute">height</span>: <span class="hljs-number">200px</span>;
+        <span class="hljs-attribute">padding-left</span>: <span class="hljs-number">8px</span>;
+        <span class="hljs-attribute">padding-top</span>: <span class="hljs-number">4px</span>;
+        <span class="hljs-attribute">color</span>: white;
+    }
+
+    <span class="hljs-selector-class">.ids-grid</span><span class="hljs-selector-pseudo">:first</span>-of-type <span class="hljs-selector-class">.ids-cell</span> {
+        <span class="hljs-attribute">height</span>: <span class="hljs-number">50px</span>;
+    }
+</span><span class="hljs-tag">&lt;/<span class="hljs-name">style</span>&gt;</span>
+
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-grid&quot;</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-cell ids-cell--1-offset-desktop ids-cell--9-col-desktop&quot;</span>&gt;</span>.ids-cell ids-cell--1-offset-desktop ids-cell--9-col-desktop<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-grid&quot;</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-cell ids-cell--2-offset-desktop ids-cell--8-col-desktop&quot;</span>&gt;</span>.ids-cell ids-cell--2-offset-desktop ids-cell--8-col-desktop<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-grid&quot;</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-cell ids-cell--3-offset-desktop ids-cell--6-col-desktop&quot;</span>&gt;</span>.ids-cell ids-cell--3-offset-desktop ids-cell--6-col-desktop<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-grid&quot;</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-cell ids-cell--4-offset-desktop ids-cell--4-col-desktop&quot;</span>&gt;</span>.ids-cell ids-cell--4-offset-desktop ids-cell--4-col-desktop<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></pre>
+        
+    </code>
+</div>
+
+    
+
+</div>
+
+</div>
+
+
+    
 
 </div>
 
@@ -103,8 +244,13 @@ dezdze</p>
         <div class="Frame-panel Frame-panel--sidebar" data-role="sidebar">
             
 
+    
+    
+        
+    
 
-<nav class="Navigation" data-behaviour="navigation">
+
+<nav class="Navigation in-variants-panel" data-behaviour="navigation">
     <div class="Navigation-panel Navigation-panel--main" data-role="main-panel">
     
         <div class="Navigation-group Navigation-search">
@@ -144,10 +290,10 @@ dezdze</p>
         
         
         
-        <li class="Tree-item Tree-entity" data-role="item">
+        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/grid--default.html"
+                href="./grid--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -181,7 +327,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/palette--default.html"
+                href="./palette--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -215,7 +361,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--default.html"
+                href="./space--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -249,7 +395,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/texts--default.html"
+                href="./texts--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -307,7 +453,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../index.html"
+                href="../../index.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -324,10 +470,10 @@ dezdze</p>
         
         
         
-        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
+        <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="./demo.html"
+                href="../../docs/demo.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -381,7 +527,7 @@ dezdze</p>
     </div>
 
     
-    <div class="Navigation-panel Navigation-panel--variants" data-role="variant-panel">
+    <div class="Navigation-panel Navigation-panel--variants is-visible" data-role="variant-panel">
         <div class="Navigation-backButtonWrapper">
             <button class="Navigation-backButton" data-role="back" type="button">
                 <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -396,7 +542,7 @@ dezdze</p>
     
         
             
-            <div class="Navigation-group" data-role="variant-group" data-component="grid">
+            <div class="Navigation-group is-visible" data-role="variant-group" data-component="grid">
                 
 <div class="Tree" data-behaviour="tree" id="tree-grid-variants">
     <div class="Tree-header">
@@ -417,7 +563,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/grid--default.html"
+                href="./grid--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -451,7 +597,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/grid--desktop.html"
+                href="./grid--desktop.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -482,10 +628,10 @@ dezdze</p>
         
         
         
-        <li class="Tree-item Tree-entity" data-role="item">
+        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/grid--offset.html"
+                href="./grid--offset.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -542,7 +688,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/palette--default.html"
+                href="./palette--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -576,7 +722,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/palette--definition-root.html"
+                href="./palette--definition-root.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -635,7 +781,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--default.html"
+                href="./space--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -669,7 +815,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--direction.html"
+                href="./space--direction.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -703,7 +849,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--direction-phone.html"
+                href="./space--direction-phone.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -737,7 +883,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--direction-tablet.html"
+                href="./space--direction-tablet.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -771,7 +917,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--margin.html"
+                href="./space--margin.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -805,7 +951,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/space--padding.html"
+                href="./space--padding.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -862,7 +1008,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/texts--default.html"
+                href="./texts--default.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -896,7 +1042,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/texts--desktop.html"
+                href="./texts--desktop.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -930,7 +1076,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/texts--phone.html"
+                href="./texts--phone.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -964,7 +1110,7 @@ dezdze</p>
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="../components/detail/texts--tablet.html"
+                href="./texts--tablet.html"
                 data-role="tree-link"
                 
                 data-pjax
@@ -1011,7 +1157,7 @@ dezdze</p>
 
 
 
-<script src="../themes/mandelbrot/js/mandelbrot.js?cachebust=1.10.3"></script>
+<script src="../../themes/mandelbrot/js/mandelbrot.js?cachebust=1.10.3"></script>
 
 
 
