--- a/public/intranets-design-system/docs/components/detail/palette--default.html
+++ b/public/intranets-design-system/docs/components/detail/palette--default.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="../../themes/mandelbrot/css/highlight.css?cachebust=1.10.3" type="text/css">
 
 
-<title>Palette | Intranets Design System</title>
+<title>Palette: Default | Intranets Design System</title>
 
 </head>
 <body>
@@ -61,14 +61,14 @@
             <div class="Frame-inner" id="pjax-container">
             
 
-<div class="Pen" data-behaviour="pen" id="pen-8d0bb0de47a0c88e43e249c3dfc50402">
+<div class="Pen" data-behaviour="pen" id="pen-e37aae3d298e17f5e421f65a76dbcb3d">
 
     
 
     <div class="Pen-panel Pen-header">
     <h1 class="Pen-title">
-        <a class="Pen-previewLink" href="../preview/palette.html" title="Preview">
-            Palette
+        <a class="Pen-previewLink" href="../preview/palette--default.html" title="Preview">
+            Palette: Default
             <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
@@ -91,13 +91,13 @@
 </div>
 
 
-    <div class="Pen-panel Pen-preview Preview" data-behaviour="preview" id="preview-8d0bb0de47a0c88e43e249c3dfc50402">
+    <div class="Pen-panel Pen-preview Preview" data-behaviour="preview" id="preview-e37aae3d298e17f5e421f65a76dbcb3d">
     <div class="Preview-wrapper" data-role="resizer">
         <div class="Preview-resizer">
              <iframe
                 class="Preview-iframe"
                 data-role="window"
-                src="../preview/palette.html"
+                src="../preview/palette--default.html"
                  style=""
                 marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" scrolling="yes">
             </iframe>
@@ -111,7 +111,7 @@
     <div class="Pen-handle Pen-handle--browser" data-role="resize-handle"></div>
 
     <div class="Pen-panel Pen-info" data-role="info">
-    <div class="Browser" data-behaviour="browser" id="browser-8d0bb0de47a0c88e43e249c3dfc50402">
+    <div class="Browser" data-behaviour="browser" id="browser-e37aae3d298e17f5e421f65a76dbcb3d">
 
     
 
@@ -120,7 +120,7 @@
         
         
         <li class="Browser-tab Browser-tab--notes is-active " data-role="tab">
-            <a href="#browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-notes">
+            <a href="#browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-notes">
                 Notes
             </a>
         </li>
@@ -128,7 +128,7 @@
         
         
         <li class="Browser-tab Browser-tab--info" data-role="tab">
-            <a href="#browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-info">
+            <a href="#browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-info">
                 Info
             </a>
         </li>
@@ -136,7 +136,7 @@
         
         
         <li class="Browser-tab Browser-tab--html" data-role="tab">
-            <a href="#browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-html">
+            <a href="#browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-html">
                 HTML
             </a>
         </li>
@@ -147,7 +147,7 @@
 
 
     
-    <div class="Browser-panel Browser-notes" data-role="tab-panel" id="browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-notes">
+    <div class="Browser-panel Browser-notes" data-role="tab-panel" id="browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-notes">
     <div class="Prose Prose--condensed">
         
         <p class="Browser-isEmptyNote">No notes defined.</p>
@@ -156,11 +156,11 @@
 </div>
 
     
-    <div class="Browser-panel" data-role="tab-panel" id="browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-info">
+    <div class="Browser-panel" data-role="tab-panel" id="browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-info">
     <ul class="Meta">
         <li class="Meta-item">
             <strong class="Meta-key">Handle:</strong>
-            <span class="Meta-value">@palette</span>
+            <span class="Meta-value">@palette--default</span>
         </li>
         
         
@@ -168,12 +168,12 @@
             <strong class="Meta-key">Preview:</strong>
             <span class="Meta-value">
                 <ul>
-                    <li><a data-no-pjax href="../preview/palette.html"><span>With layout</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+                    <li><a data-no-pjax href="../preview/palette--default.html"><span>With layout</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
 </svg>
 </a></li>
-                    <li><a data-no-pjax href="../render/palette.html"><span>Component only</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+                    <li><a data-no-pjax href="../render/palette--default.html"><span>Component only</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
 </svg>
@@ -192,7 +192,7 @@
 
     
     
-<div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-8d0bb0de47a0c88e43e249c3dfc50402-panel-html">
+<div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-e37aae3d298e17f5e421f65a76dbcb3d-panel-html">
     <code class="Code Code--lang-html hljs">
         
         <pre><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">&quot;ids-grid&quot;</span>&gt;</span>
@@ -2374,7 +2374,7 @@
         
         
         
-        <li class="Tree-item Tree-entity" data-role="item">
+        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
             <a
                 class="Tree-entityLink"
                 href="./palette--default.html"
