update palette and deploy

--- a/src/scss/_color-definitions.scss
+++ b/src/scss/_color-definitions.scss
@@ -552,8 +552,8 @@ $palette-blue-grey-700: list.nth($palette-blue-grey, 8);
 $palette-blue-grey-800: list.nth($palette-blue-grey, 9);
 $palette-blue-grey-900: list.nth($palette-blue-grey, 10);
 
-$color-black: 000000;
-$color-white: FFFFFF;
+$color-black: "0, 0, 0";
+$color-white: "255, 255, 255";
 
 
 $styleguide-generate-template: false !default;
