--- a/components/_preview.twig
+++ b/components/_preview.twig
@@ -3,13 +3,18 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link media="all" rel="stylesheet" href="/intranets-design-system/css/intranets-ds.min.css">
+    <link media="all" rel="stylesheet" href="/css/intranets-ds.min.css">
     <title>Preview Layout</title>
 </head>
 <body>
-
+<style>
+.test{
+  background-color: var(--palette-blue-700);
+}
+</style>
+<div class="test">This text should be blue.</div>
 {{ yield }}
 
-  <script src="/intranets-design-system/js/intranets-ds.min.js"></script>
+  <script src="/js/intranets-ds.min.js"></script>
 </body>
 </html>
