Update submodule reference

--- a/public/docs/components/detail/grid--default.html
+++ b/public/docs/components/detail/grid--default.html
@@ -527,7 +527,7 @@
                     <dt class="Tree-asideTerm">Built on:</dt>
                     <dd class="Tree-asideDescription">
                         
-                            <time datetime="2025-10-01T10:56:49.992Z">
+                            <time datetime="2025-10-01T20:13:28.485Z">
                                 01/10/2025
                             </time>
                         
@@ -738,14 +738,14 @@
         <li class="Tree-item Tree-entity" data-role="item">
             <a
                 class="Tree-entityLink"
-                href="./palette--definition-root.html"
+                href="./palette--variables.html"
                 data-role="tree-link"
                 
                 data-pjax
-                data-test="palette--definition-root"
+                data-test="palette--variables"
                 data-handle="palette"
             >
-                <span>Definition Root</span>
+                <span>Variables</span>
                 
 
 <div class="Status Status--unlabelled">
