--- a/public/docs/components/preview/texts--default.html
+++ b/public/docs/components/preview/texts--default.html
@@ -13,151 +13,151 @@
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--8-desktop">ids-text--8-desktop</span>
+        <span class="ids-fs--8">ids-fs--8</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--10-desktop">ids-text--10-desktop</span>
+        <span class="ids-fs--10">ids-fs--10</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--12-desktop">ids-text--12-desktop</span>
+        <span class="ids-fs--12">ids-fs--12</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--14-desktop">ids-text--14-desktop</span>
+        <span class="ids-fs--14">ids-fs--14</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--16-desktop">ids-text--16-desktop</span>
+        <span class="ids-fs--16">ids-fs--16</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--18-desktop">ids-text--18-desktop</span>
+        <span class="ids-fs--18">ids-fs--18</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--20-desktop">ids-text--20-desktop</span>
+        <span class="ids-fs--20">ids-fs--20</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--22-desktop">ids-text--22-desktop</span>
+        <span class="ids-fs--22">ids-fs--22</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--24-desktop">ids-text--24-desktop</span>
+        <span class="ids-fs--24">ids-fs--24</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--26-desktop">ids-text--26-desktop</span>
+        <span class="ids-fs--26">ids-fs--26</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--28-desktop">ids-text--28-desktop</span>
+        <span class="ids-fs--28">ids-fs--28</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--32-desktop">ids-text--32-desktop</span>
+        <span class="ids-fs--32">ids-fs--32</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--38-desktop">ids-text--38-desktop</span>
+        <span class="ids-fs--38">ids-fs--38</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--40-desktop">ids-text--40-desktop</span>
+        <span class="ids-fs--40">ids-fs--40</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--42-desktop">ids-text--42-desktop</span>
+        <span class="ids-fs--42">ids-fs--42</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--44-desktop">ids-text--44-desktop</span>
+        <span class="ids-fs--44">ids-fs--44</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--48-desktop">ids-text--48-desktop</span>
+        <span class="ids-fs--48">ids-fs--48</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--50-desktop">ids-text--50-desktop</span>
+        <span class="ids-fs--50">ids-fs--50</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--52-desktop">ids-text--52-desktop</span>
+        <span class="ids-fs--52">ids-fs--52</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--56-desktop">ids-text--56-desktop</span>
+        <span class="ids-fs--56">ids-fs--56</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--60-desktop">ids-text--60-desktop</span>
+        <span class="ids-fs--60">ids-fs--60</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--64-desktop">ids-text--64-desktop</span>
+        <span class="ids-fs--64">ids-fs--64</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--72-desktop">ids-text--72-desktop</span>
+        <span class="ids-fs--72">ids-fs--72</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--84-desktop">ids-text--84-desktop</span>
+        <span class="ids-fs--84">ids-fs--84</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--92-desktop">ids-text--92-desktop</span>
+        <span class="ids-fs--92">ids-fs--92</span>
     </div>
 </div>
 
