--- a/public/docs/components/render/texts--phone.html
+++ b/public/docs/components/render/texts--phone.html
@@ -4,151 +4,151 @@
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--8-phone">ids-text--8-phone</span>
+        <span class="ids-fs--8-phone">ids-fs--8-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--10-phone">ids-text--10-phone</span>
+        <span class="ids-fs--10-phone">ids-fs--10-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--12-phone">ids-text--12-phone</span>
+        <span class="ids-fs--12-phone">ids-fs--12-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--14-phone">ids-text--14-phone</span>
+        <span class="ids-fs--14-phone">ids-fs--14-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--16-phone">ids-text--16-phone</span>
+        <span class="ids-fs--16-phone">ids-fs--16-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--18-phone">ids-text--18-phone</span>
+        <span class="ids-fs--18-phone">ids-fs--18-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--20-phone">ids-text--20-phone</span>
+        <span class="ids-fs--20-phone">ids-fs--20-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--22-phone">ids-text--22-phone</span>
+        <span class="ids-fs--22-phone">ids-fs--22-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--24-phone">ids-text--24-phone</span>
+        <span class="ids-fs--24-phone">ids-fs--24-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--26-phone">ids-text--26-phone</span>
+        <span class="ids-fs--26-phone">ids-fs--26-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--28-phone">ids-text--28-phone</span>
+        <span class="ids-fs--28-phone">ids-fs--28-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--32-phone">ids-text--32-phone</span>
+        <span class="ids-fs--32-phone">ids-fs--32-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--38-phone">ids-text--38-phone</span>
+        <span class="ids-fs--38-phone">ids-fs--38-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--40-phone">ids-text--40-phone</span>
+        <span class="ids-fs--40-phone">ids-fs--40-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--42-phone">ids-text--42-phone</span>
+        <span class="ids-fs--42-phone">ids-fs--42-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--44-phone">ids-text--44-phone</span>
+        <span class="ids-fs--44-phone">ids-fs--44-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--48-phone">ids-text--48-phone</span>
+        <span class="ids-fs--48-phone">ids-fs--48-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--50-phone">ids-text--50-phone</span>
+        <span class="ids-fs--50-phone">ids-fs--50-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--52-phone">ids-text--52-phone</span>
+        <span class="ids-fs--52-phone">ids-fs--52-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--56-phone">ids-text--56-phone</span>
+        <span class="ids-fs--56-phone">ids-fs--56-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--60-phone">ids-text--60-phone</span>
+        <span class="ids-fs--60-phone">ids-fs--60-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--64-phone">ids-text--64-phone</span>
+        <span class="ids-fs--64-phone">ids-fs--64-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--72-phone">ids-text--72-phone</span>
+        <span class="ids-fs--72-phone">ids-fs--72-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--84-phone">ids-text--84-phone</span>
+        <span class="ids-fs--84-phone">ids-fs--84-phone</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--92-phone">ids-text--92-phone</span>
+        <span class="ids-fs--92-phone">ids-fs--92-phone</span>
     </div>
 </div>
 
