--- a/public/docs/components/render/texts--tablet.html
+++ b/public/docs/components/render/texts--tablet.html
@@ -4,151 +4,151 @@
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--8-tablet">ids-text--8-tablet</span>
+        <span class="ids-fs--8-tablet">ids-fs--8-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--10-tablet">ids-text--10-tablet</span>
+        <span class="ids-fs--10-tablet">ids-fs--10-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--12-tablet">ids-text--12-tablet</span>
+        <span class="ids-fs--12-tablet">ids-fs--12-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--14-tablet">ids-text--14-tablet</span>
+        <span class="ids-fs--14-tablet">ids-fs--14-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--16-tablet">ids-text--16-tablet</span>
+        <span class="ids-fs--16-tablet">ids-fs--16-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--18-tablet">ids-text--18-tablet</span>
+        <span class="ids-fs--18-tablet">ids-fs--18-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--20-tablet">ids-text--20-tablet</span>
+        <span class="ids-fs--20-tablet">ids-fs--20-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--22-tablet">ids-text--22-tablet</span>
+        <span class="ids-fs--22-tablet">ids-fs--22-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--24-tablet">ids-text--24-tablet</span>
+        <span class="ids-fs--24-tablet">ids-fs--24-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--26-tablet">ids-text--26-tablet</span>
+        <span class="ids-fs--26-tablet">ids-fs--26-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--28-tablet">ids-text--28-tablet</span>
+        <span class="ids-fs--28-tablet">ids-fs--28-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--32-tablet">ids-text--32-tablet</span>
+        <span class="ids-fs--32-tablet">ids-fs--32-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--38-tablet">ids-text--38-tablet</span>
+        <span class="ids-fs--38-tablet">ids-fs--38-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--40-tablet">ids-text--40-tablet</span>
+        <span class="ids-fs--40-tablet">ids-fs--40-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--42-tablet">ids-text--42-tablet</span>
+        <span class="ids-fs--42-tablet">ids-fs--42-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--44-tablet">ids-text--44-tablet</span>
+        <span class="ids-fs--44-tablet">ids-fs--44-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--48-tablet">ids-text--48-tablet</span>
+        <span class="ids-fs--48-tablet">ids-fs--48-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--50-tablet">ids-text--50-tablet</span>
+        <span class="ids-fs--50-tablet">ids-fs--50-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--52-tablet">ids-text--52-tablet</span>
+        <span class="ids-fs--52-tablet">ids-fs--52-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--56-tablet">ids-text--56-tablet</span>
+        <span class="ids-fs--56-tablet">ids-fs--56-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--60-tablet">ids-text--60-tablet</span>
+        <span class="ids-fs--60-tablet">ids-fs--60-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--64-tablet">ids-text--64-tablet</span>
+        <span class="ids-fs--64-tablet">ids-fs--64-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--72-tablet">ids-text--72-tablet</span>
+        <span class="ids-fs--72-tablet">ids-fs--72-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--84-tablet">ids-text--84-tablet</span>
+        <span class="ids-fs--84-tablet">ids-fs--84-tablet</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--92-tablet">ids-text--92-tablet</span>
+        <span class="ids-fs--92-tablet">ids-fs--92-tablet</span>
     </div>
 </div>
 
