--- a/public/docs/components/render/texts--desktop.html
+++ b/public/docs/components/render/texts--desktop.html
@@ -3,151 +3,151 @@
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--8-desktop">ids-text--8-desktop</span>
+        <span class="ids-fs--8-desktop">ids-fs--8-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--10-desktop">ids-text--10-desktop</span>
+        <span class="ids-fs--10-desktop">ids-fs--10-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--12-desktop">ids-text--12-desktop</span>
+        <span class="ids-fs--12-desktop">ids-fs--12-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--14-desktop">ids-text--14-desktop</span>
+        <span class="ids-fs--14-desktop">ids-fs--14-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--16-desktop">ids-text--16-desktop</span>
+        <span class="ids-fs--16-desktop">ids-fs--16-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--18-desktop">ids-text--18-desktop</span>
+        <span class="ids-fs--18-desktop">ids-fs--18-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--20-desktop">ids-text--20-desktop</span>
+        <span class="ids-fs--20-desktop">ids-fs--20-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--22-desktop">ids-text--22-desktop</span>
+        <span class="ids-fs--22-desktop">ids-fs--22-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--24-desktop">ids-text--24-desktop</span>
+        <span class="ids-fs--24-desktop">ids-fs--24-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--26-desktop">ids-text--26-desktop</span>
+        <span class="ids-fs--26-desktop">ids-fs--26-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--28-desktop">ids-text--28-desktop</span>
+        <span class="ids-fs--28-desktop">ids-fs--28-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--32-desktop">ids-text--32-desktop</span>
+        <span class="ids-fs--32-desktop">ids-fs--32-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--38-desktop">ids-text--38-desktop</span>
+        <span class="ids-fs--38-desktop">ids-fs--38-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--40-desktop">ids-text--40-desktop</span>
+        <span class="ids-fs--40-desktop">ids-fs--40-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--42-desktop">ids-text--42-desktop</span>
+        <span class="ids-fs--42-desktop">ids-fs--42-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--44-desktop">ids-text--44-desktop</span>
+        <span class="ids-fs--44-desktop">ids-fs--44-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--48-desktop">ids-text--48-desktop</span>
+        <span class="ids-fs--48-desktop">ids-fs--48-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--50-desktop">ids-text--50-desktop</span>
+        <span class="ids-fs--50-desktop">ids-fs--50-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--52-desktop">ids-text--52-desktop</span>
+        <span class="ids-fs--52-desktop">ids-fs--52-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--56-desktop">ids-text--56-desktop</span>
+        <span class="ids-fs--56-desktop">ids-fs--56-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--60-desktop">ids-text--60-desktop</span>
+        <span class="ids-fs--60-desktop">ids-fs--60-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--64-desktop">ids-text--64-desktop</span>
+        <span class="ids-fs--64-desktop">ids-fs--64-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--72-desktop">ids-text--72-desktop</span>
+        <span class="ids-fs--72-desktop">ids-fs--72-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--84-desktop">ids-text--84-desktop</span>
+        <span class="ids-fs--84-desktop">ids-fs--84-desktop</span>
     </div>
 </div>
 
 <div class="ids-grid">
     <div class="ids-cell ids-cell--6-col">
-        <span class="ids-text--92-desktop">ids-text--92-desktop</span>
+        <span class="ids-fs--92-desktop">ids-fs--92-desktop</span>
     </div>
 </div>
 
