--- a/components/palette/palette.twig
+++ b/components/palette/palette.twig
@@ -4,7 +4,7 @@
 			<h4>background {{li}}</h4>
 			{% for v in variation %}
 				<div class="ids-padding--8 ids-color--{{li}}-{{v}}">
-					.ids-color--{{li}}-{{v}}
+					ids-color--{{li}}-{{v}}
 				</div>
 			{% endfor %}
 		</div>
@@ -16,7 +16,7 @@
 			<h4>color {{li}}</h4>
 			{% for v in variation %}
 				<div class="ids-padding--8 ids-color-text--{{li}}-{{v}}" style="border: solid 1px grey">
-					.ids-color-text--{{li}}-{{v}}
+					ids-color-text--{{li}}-{{v}}
 				</div>
 			{% endfor %}
 		</div>
