--- a/components/space/space--direction-phone.twig
+++ b/components/space/space--direction-phone.twig
@@ -3,7 +3,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-left--{{p}}-phone">
-				.ids-margin-left--{{p}}-phone
+				ids-margin-left--{{p}}-phone
 			</div>
 		</div>
 	{% endfor %}
@@ -13,7 +13,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-right--{{p}}-phone">
-				.ids-margin-right--{{p}}-phone
+				ids-margin-right--{{p}}-phone
 			</div>
 		</div>
 	{% endfor %}
@@ -23,7 +23,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-top--{{p}}-phone">
-				.ids-margin-top--{{p}}-phone
+				ids-margin-top--{{p}}-phone
 			</div>
 		</div>
 	{% endfor %}
@@ -33,7 +33,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-bottom--{{p}}-phone">
-				.ids-margin-bottom--{{p}}-phone
+				ids-margin-bottom--{{p}}-phone
 			</div>
 		</div>
 	{% endfor %}
