--- a/components/space/space--direction-tablet.twig
+++ b/components/space/space--direction-tablet.twig
@@ -3,7 +3,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-left--{{p}}-tablet">
-				.ids-margin-left--{{p}}-tablet
+				ids-margin-left--{{p}}-tablet
 			</div>
 		</div>
 	{% endfor %}
@@ -13,7 +13,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-right--{{p}}-tablet">
-				.ids-margin-right--{{p}}-tablet
+				ids-margin-right--{{p}}-tablet
 			</div>
 		</div>
 	{% endfor %}
@@ -23,7 +23,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-top--{{p}}-tablet">
-				.ids-margin-top--{{p}}-tablet
+				ids-margin-top--{{p}}-tablet
 			</div>
 		</div>
 	{% endfor %}
