--- a/components/space/space--direction.twig
+++ b/components/space/space--direction.twig
@@ -3,7 +3,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-left--{{p}}">
-				.ids-margin-left--{{p}}
+				ids-margin-left--{{p}}
 			</div>
 		</div>
 	{% endfor %}
@@ -13,7 +13,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-right--{{p}}">
-				.ids-margin-right--{{p}}
+				ids-margin-right--{{p}}
 			</div>
 		</div>
 	{% endfor %}
@@ -23,7 +23,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-top--{{p}}">
-				.ids-margin-top--{{p}}
+				ids-margin-top--{{p}}
 			</div>
 		</div>
 	{% endfor %}
@@ -33,7 +33,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-padding--0">
 			<div class="margin ids-margin-bottom--{{p}}">
-				.ids-margin-bottom--{{p}}
+				ids-margin-bottom--{{p}}
 			</div>
 		</div>
 	{% endfor %}
