--- a/components/space/space--margin.twig
+++ b/components/space/space--margin.twig
@@ -2,7 +2,7 @@
 	{% for p in sizes %}
 		<div class="ids-cell ids-cell--3-col ids-padding--0">
 			<div class="margin ids-margin--{{p}}">
-				.ids-margin--{{p}}
+				ids-margin--{{p}}
 			</div>
 		</div>
 	{% endfor %}
